```mermaid
classDiagram
    class Student
    class Room
    class Contract
    class Fee
    class MaintenanceRequest
    class Violation
    Dashboard ..> Student
    Dashboard ..> Room
    Dashboard ..> Contract
    Dashboard ..> Fee
    Dashboard ..> MaintenanceRequest
    Dashboard ..> Violation
```
